// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`player band snapshots > glow: settled frame at the Víkin web logical-screen size 1`] = `
"clearRect
fillRect (0,0,960,108)
fillRect (-270,-48.599999999999994,205.2,205.2)
fillRect (172.99999999999997,-48.599999999999994,205.2,205.2)
fillRect (615.9999999999999,-48.599999999999994,205.2,205.2)
save
save
image dest=(-194.40000000000003,0,54,108)
text "7" at=-91.40000000000003,54 font=700 30px "GT America"
text "Jón Jónsson" at=-5.400000000000034,54 font=700 30px "GT America"
restore
save
image dest=(248.59999999999997,0,54,108)
text "7" at=351.59999999999997,54 font=700 30px "GT America"
text "Jón Jónsson" at=437.59999999999997,54 font=700 30px "GT America"
restore
save
image dest=(691.5999999999999,0,54,108)
text "7" at=794.5999999999999,54 font=700 30px "GT America"
text "Jón Jónsson" at=880.5999999999999,54 font=700 30px "GT America"
restore
restore"
`;

exports[`player band snapshots > plain: settled frame at the Víkin web logical-screen size 1`] = `
"clearRect
fillRect (0,0,960,108)
save
save
image dest=(-194.40000000000003,0,54,108)
text "7" at=-91.40000000000003,54 font=700 30px "GT America"
text "Jón Jónsson" at=-5.400000000000034,54 font=700 30px "GT America"
restore
save
image dest=(248.59999999999997,0,54,108)
text "7" at=351.59999999999997,54 font=700 30px "GT America"
text "Jón Jónsson" at=437.59999999999997,54 font=700 30px "GT America"
restore
save
image dest=(691.5999999999999,0,54,108)
text "7" at=794.5999999999999,54 font=700 30px "GT America"
text "Jón Jónsson" at=880.5999999999999,54 font=700 30px "GT America"
restore
restore"
`;

exports[`player band snapshots > streamer: settled frame at the Víkin web logical-screen size 1`] = `
"clearRect
fillRect (0,0,960,108)
fillRect (636,18,97.2,2)
fillRect (474,54,97.2,2)
fillRect (312,90,97.2,2)
save
save
image dest=(-259.20000000000005,0,54,108)
text "7" at=-156.20000000000005,54 font=700 30px "GT America"
text "Jón Jónsson" at=-70.20000000000005,54 font=700 30px "GT America"
restore
save
image dest=(183.79999999999995,0,54,108)
text "7" at=286.79999999999995,54 font=700 30px "GT America"
text "Jón Jónsson" at=372.79999999999995,54 font=700 30px "GT America"
restore
save
image dest=(626.8,0,54,108)
text "7" at=729.8,54 font=700 30px "GT America"
text "Jón Jónsson" at=815.8,54 font=700 30px "GT America"
restore
restore"
`;

exports[`player band snapshots > streamer: settled frame at the stacked web logical-screen size 1`] = `
"clearRect
fillRect (0,0,3840,192)
fillRect (3264,32,172.8,4)
fillRect (2976,96,172.8,4)
fillRect (2688,160,172.8,4)
save
save
image dest=(-460.8,0,96,192)
text "10" at=-278.8,96 font=700 54px "GT America"
text "Jón Jónsson" at=-61.80000000000001,96 font=700 54px "GT America"
restore
save
image dest=(392.2,0,96,192)
text "10" at=574.2,96 font=700 54px "GT America"
text "Jón Jónsson" at=791.2,96 font=700 54px "GT America"
restore
save
image dest=(1245.2,0,96,192)
text "10" at=1427.2,96 font=700 54px "GT America"
text "Jón Jónsson" at=1644.2,96 font=700 54px "GT America"
restore
save
image dest=(2098.2,0,96,192)
text "10" at=2280.2,96 font=700 54px "GT America"
text "Jón Jónsson" at=2497.2,96 font=700 54px "GT America"
restore
save
image dest=(2951.2,0,96,192)
text "10" at=3133.2,96 font=700 54px "GT America"
text "Jón Jónsson" at=3350.2,96 font=700 54px "GT America"
restore
save
image dest=(3804.2,0,96,192)
text "10" at=3986.2,96 font=700 54px "GT America"
text "Jón Jónsson" at=4203.2,96 font=700 54px "GT America"
restore
restore"
`;

exports[`substitution band snapshots > flash: settled frame at the Víkin web logical-screen size 1`] = `
"clearRect
fillRect (0,0,960,108)
save
beginPath
rect
clip
save
save
beginPath
moveTo
lineTo
moveTo
lineTo
lineTo
stroke
restore
save
image dest=(92,0,54,108)
text "12" at=195,54 font=700 30px "GT America"
text "Siggi Bekkur" at=317,54 font=700 30px "GT America"
restore
save
beginPath
moveTo
lineTo
moveTo
lineTo
lineTo
stroke
restore
save
beginPath
moveTo
lineTo
moveTo
lineTo
lineTo
stroke
restore
save
image dest=(804,0,108,108)
text "7" at=961,54 font=700 30px "GT America"
text "Jón Jónsson" at=1047,54 font=700 30px "GT America"
restore
restore
save
beginPath
moveTo
lineTo
moveTo
lineTo
lineTo
stroke
restore
restore"
`;

exports[`substitution band snapshots > lay outing is stable: the measured unit matches the drawn unit geometry 1`] = `1301`;

exports[`substitution band snapshots > relay: settled frame at the Víkin web logical-screen size 1`] = `
"clearRect
fillRect (0,0,960,108)
save
save
beginPath
rect
clip
save
save
beginPath
moveTo
lineTo
moveTo
lineTo
lineTo
stroke
restore
save
image dest=(-102.40000000000003,0,54,108)
text "12" at=0.5999999999999659,54 font=700 30px "GT America"
text "Siggi Bekkur" at=122.59999999999997,54 font=700 30px "GT America"
restore
save
beginPath
moveTo
lineTo
moveTo
lineTo
lineTo
stroke
restore
save
beginPath
moveTo
lineTo
moveTo
lineTo
lineTo
stroke
restore
save
image dest=(609.5999999999999,0,108,108)
text "7" at=766.5999999999999,54 font=700 30px "GT America"
text "Jón Jónsson" at=852.5999999999999,54 font=700 30px "GT America"
restore
restore
restore
restore"
`;

exports[`substitution band snapshots > static: settled frame at the Víkin web logical-screen size 1`] = `
"clearRect
fillRect (0,0,960,108)
save
save
beginPath
rect
clip
save
save
beginPath
moveTo
lineTo
moveTo
lineTo
lineTo
stroke
restore
save
image dest=(92,0,54,108)
text "12" at=195,54 font=700 30px "GT America"
text "Siggi Bekkur" at=317,54 font=700 30px "GT America"
restore
save
beginPath
moveTo
lineTo
moveTo
lineTo
lineTo
stroke
restore
save
beginPath
moveTo
lineTo
moveTo
lineTo
lineTo
stroke
restore
save
image dest=(804,0,108,108)
text "7" at=961,54 font=700 30px "GT America"
text "Jón Jónsson" at=1047,54 font=700 30px "GT America"
restore
restore
restore
restore"
`;

exports[`substitution band snapshots > static: settled unit layout matches the measured substitution unit 1`] = `
"clearRect
fillRect (0,0,3840,192)
save
save
beginPath
rect
clip
save
save
beginPath
moveTo
lineTo
moveTo
lineTo
lineTo
stroke
restore
save
image dest=(163,0,96,192)
text "12" at=345,96 font=700 54px "GT America"
text "Siggi Bekkur" at=562,96 font=700 54px "GT America"
restore
save
beginPath
moveTo
lineTo
moveTo
lineTo
lineTo
stroke
restore
save
beginPath
moveTo
lineTo
moveTo
lineTo
lineTo
stroke
restore
save
image dest=(1429,0,192,192)
text "7" at=1707,96 font=700 54px "GT America"
text "Jón Jónsson" at=1859,96 font=700 54px "GT America"
restore
restore
restore
save
beginPath
rect
clip
save
save
beginPath
moveTo
lineTo
moveTo
lineTo
lineTo
stroke
restore
save
image dest=(2476,0,96,192)
text "12" at=2658,96 font=700 54px "GT America"
text "Siggi Bekkur" at=2875,96 font=700 54px "GT America"
restore
save
beginPath
moveTo
lineTo
moveTo
lineTo
lineTo
stroke
restore
save
beginPath
moveTo
lineTo
moveTo
lineTo
lineTo
stroke
restore
save
image dest=(3742,0,192,192)
text "7" at=4020,96 font=700 54px "GT America"
text "Jón Jónsson" at=4172,96 font=700 54px "GT America"
restore
restore
restore
restore"
`;
